feat: add Flowise AI and Open WebUI services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ volumes:
   postgres_storage:
   ollama_storage:
   qdrant_storage:
-
+  open-webui:
+  flowise:
 networks:
   demo:
 
@@ -38,13 +39,40 @@ x-init-ollama: &init-ollama
   volumes:
     - ollama_storage:/root/.ollama
   entrypoint: /bin/sh
+
   environment:
     - OLLAMA_HOST=ollama:11434
   command:
-    - "-c"
-    - "sleep 3; ollama pull llama3.2"
+    - '-c'
+    - 'sleep 3; ollama pull llama3.2'
 
 services:
+  flowise:
+    image: flowiseai/flowise
+    networks: ['demo']
+    restart: unless-stopped
+    container_name: flowise
+    environment:
+      - PORT=3001
+    ports:
+      - 3001:3001
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+    volumes:
+      - ~/.flowise:/root/.flowise
+    entrypoint: /bin/sh -c "sleep 3; flowise start"
+
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:main
+    networks: ['demo']
+    restart: unless-stopped
+    container_name: open-webui
+    ports:
+      - '3000:8080'
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+    volumes:
+      - open-webui:/app/backend/data
   postgres:
     image: postgres:16-alpine
     hostname: postgres
@@ -54,10 +82,16 @@ services:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
       - POSTGRES_DB
+    ports:
+      - 5432:5432
     volumes:
       - postgres_storage:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+      test:
+        [
+          'CMD-SHELL',
+          'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}',
+        ]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -68,8 +102,8 @@ services:
     container_name: n8n-import
     entrypoint: /bin/sh
     command:
-      - "-c"
-      - "n8n import:credentials --separate --input=/backup/credentials && n8n import:workflow --separate --input=/backup/workflows"
+      - '-c'
+      - 'n8n import:credentials --separate --input=/backup/credentials && n8n import:workflow --separate --input=/backup/workflows'
     volumes:
       - ./n8n/backup:/backup
     depends_on:
@@ -105,11 +139,11 @@ services:
       - qdrant_storage:/qdrant/storage
 
   ollama-cpu:
-    profiles: ["cpu"]
+    profiles: ['cpu']
     <<: *service-ollama
 
   ollama-gpu:
-    profiles: ["gpu-nvidia"]
+    profiles: ['gpu-nvidia']
     <<: *service-ollama
     deploy:
       resources:
@@ -120,21 +154,21 @@ services:
               capabilities: [gpu]
 
   ollama-gpu-amd:
-    profiles: ["gpu-amd"]
+    profiles: ['gpu-amd']
     <<: *service-ollama
     image: ollama/ollama:rocm
     devices:
-      - "/dev/kfd"
-      - "/dev/dri"
+      - '/dev/kfd'
+      - '/dev/dri'
 
   ollama-pull-llama-cpu:
-    profiles: ["cpu"]
+    profiles: ['cpu']
     <<: *init-ollama
     depends_on:
       - ollama-cpu
 
   ollama-pull-llama-gpu:
-    profiles: ["gpu-nvidia"]
+    profiles: ['gpu-nvidia']
     <<: *init-ollama
     depends_on:
       - ollama-gpu
@@ -144,4 +178,4 @@ services:
     <<: *init-ollama
     image: ollama/ollama:rocm
     depends_on:
-     - ollama-gpu-amd
+      - ollama-gpu-amd
